--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,26 @@
 <%- include('partials/header'); %>
 
+<div class="container">
+
+    <div class="row">
+        <h1 style="text-align: center;">Search Movie</h1>
+        
+        <div style="width: 30%;margin: 25px auto;">
+                        
+            <form action="/result" method="GET">
+                <div class="form-group">
+                    <input class="form-control" type="text" name="movie_name" placeholder="movie name">
+                </div>
+                
+                <div class="form-group">
+                    <button class="btn btn-lg btn-primary btn-block" > Search</button>
+                </div>
+            </form>
+        
+        </div>
+    </div>
+</div>
+
 
 
 <%- include('partials/footer'); %>
