--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,13 +18,13 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Movie Search</a>
+                <a class="navbar-brand" href="/">Movie Search</a>
             </div>
             <div class="collapse navbar-collapse">
 
                 <ul class="nav navbar-nav navbar-right"> 
                     <li class="nav-item" ><a href="/" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="/result" class="nav-link">Search</a></li>
+                    <li class="nav-item"><a href="/" class="nav-link">Search</a></li>
                 </ul>
             </div>
         </div>
