--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -61,3 +61,16 @@ body {
 .head {
     color: ivory;
 }
+
+
+.thumbnail {
+    padding : 0;
+}
+
+.thumbnail .caption-full {
+    padding : 9px;
+}
+
+.delete-form {
+    display: inline;
+}
