--- a/views/moreinfo.ejs
+++ b/views/moreinfo.ejs
@@ -13,6 +13,9 @@
                 <div class="article">
                 
                     <div class="caption">
+                        <div class="text-center">
+                            <h2>More Info </h2>
+                        </div>
                         <hr>
                         <h5 class="heading" > Title         : </h5><h5 class="matter" >     <%= parsedData["Title"] %> </h5>
                         <hr>
