--- a/views/result.ejs
+++ b/views/result.ejs
@@ -3,11 +3,11 @@
 <div class="container">
     <div class="row text-center" style="display: flex; flex-wrap: wrap;">
         <% parsedData["Search"].forEach(function(movie){ %>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-6" style="padding-bottom: 30px;">
                 <div class="thumbnail">
                     <img src="<%= movie["Poster"] %>" >
                     <div class="caption">
-                        <h4><%= movie["Title"] %></h4>
+                        <h4 class="head" ><%= movie["Title"] %></h4>
                     </div>
                     
                 </div>
